@@ -21,6 +21,8 @@ ikiwiki (3.20150330) UNRELEASED; urgency=medium
   * Make the attachment plugin work with CGI.pm 4.x (Closes: #786586;
     workaround for #786587 in libcgi-pm-perl)
   * Add a public-domain email icon from tango-icon-theme
+  * Populate pagectime from either mtime or inode change time,
+    whichever is older, again for more reproducible builds
 
  -- Joey Hess <id@joeyh.name>  Tue, 28 Apr 2015 12:24:08 -0400
 
